Fix scrollbar bottom

--- a/css/style.css
+++ b/css/style.css
@@ -48,4 +48,5 @@ body {
   position: relative;
   top: 425px;
   left: 292px;
+  width: 200px;
 }
